syntax = "proto3";

package santiago.web.play;

import "santiago/common/generated.proto";

service WebPlay {
  rpc createPlayElement(santiago.common.CreatePlayElementRequest)
      returns (santiago.common.PlayElementResponse);

  rpc getPlayElement(santiago.common.GetPlayElementRequest)
      returns (santiago.common.PlayElementResponse);

  rpc updatePlayElement(santiago.common.UpdatePlayElementRequest)
      returns (santiago.common.PlayElementResponse);

  rpc deletePlayElement(santiago.common.DeletePlayElementRequest)
      returns (santiago.common.DeletePlayElementResponse);

  rpc getOwnedPlayElements(santiago.common.GetOwnedPlayElementsRequest)
      returns (santiago.common.GetOwnedPlayElementsResponse);

  rpc getOwnedPlayElementsV2(santiago.common.GetOwnedPlayElementsRequest)
      returns (santiago.common.GetOwnedPlayElementsResponseV2);

  rpc getBlueprintsById(santiago.common.GetBlueprintsByIdRequest)
      returns (santiago.common.GetBlueprintsByIdResponse);

  rpc getScheduledBlueprints(santiago.common.GetScheduledBlueprintsRequest)
      returns (santiago.common.GetScheduledBlueprintsResponse);

  rpc createModDataVersion(santiago.common.CreateModDataVersionRequest)
      returns (santiago.common.CreateModDataVersionResponse);

  rpc listModDataVersions(santiago.common.ListModDataVersionsRequest)
      returns (santiago.common.ListModDataVersionsResponse);

  rpc UploadExperienceThumbnail(santiago.common.UploadExperienceThumbnailRequest)
      returns (santiago.common.UploadExperienceThumbnailResponse);

  rpc GetProgressionTypes(santiago.common.GetProgressionTypesRequest)
      returns (santiago.common.GetProgressionTypesResponse);

  rpc GetLicenseRequirements(santiago.common.GetLicenseRequirementsRequest)
      returns (santiago.common.GetLicenseRequirementsResponse);

  rpc GetAvailableTags(santiago.common.GetAvailableTagsRequest)
      returns (santiago.common.GetAvailableTagsResponse);

  rpc ListExperiences(santiago.common.ListExperiencesRequest)
      returns (santiago.common.ListExperiencesResponse);

  rpc DeleteAttachments(santiago.common.DeleteAttachmentsRequest)
      returns (santiago.common.DeleteAttachmentsResponse);
}
